# chromadb-ops

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  go.mod  go.sum  main.go  pyproject.toml  query.sql  schema.sql  sqlc.yaml
.github/workflows/: go-binaries.yaml  go-lint.yaml  go-test.yml  release.yml  test.yaml
chroma_ops/: __init__.py  clean.py  collection.py  collection_snapshot.py  constants.py  db.py  db_clean.py  db_info.py  fts.py  hnsw.py  info.py  main.py  rebuild_fts.py  utils.py  wal.py  wal_clean.py  wal_commit.py  wal_config.py  wal_export.py  wal_info.py
chroma_ops/scripts/: drop_fts.sql  snapshot.sql
cmd/: clean.go  clean_test.go  fts.go  fts_test.go  root.go
experiments/: hnsw_rebuild_test.ipynb  wal_commit.ipynb
internal/chroma/: utils.go
internal/db/: models.go  query.sql.go  tx.go
tests/: test_clean.py  test_collection_snapshot.py  test_db_clean.py  test_fts.py  test_hnsw.py  test_info.py  test_rebuild_fts.py  test_utils.py  test_wal_clean.py  test_wal_commit.py  test_wal_config.py  test_wal_export.py  test_wal_info.py
