[tool.poetry]
name = "chromadb-ops"
version = "0.0.4"
description = "Tiny unofficial ChromaDB operations CLI to help you manage your ChromaDB instance."
authors = ["Trayan Azarov <trayan.azarov@amikos.tech>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "chroma_ops" }]
[tool.poetry.urls]
"Bug Tracker" = "https://github.com/amikos-tech/chromadb-ops/issues"
"Homepage" = "https://github.com/amikos-tech/chromadb-ops/"
"Source" = "https://github.com/amikos-tech/chromadb-ops/"

[tool.poetry.scripts]
"chops" = "chroma_ops.main:app"

[tool.poetry.dependencies]
python = ">=3.9"
chromadb = ">=0.4.22"
typer = {extras = ["all"], version = "^0.9.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "23.3.0"
pre-commit = "^3.6.0"
hypothesis = "^6.92.0"

[tool.mypy]
python_version = "3.9"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rA"
testpaths = [
    "tests",
    "integration",
]
