[tool.poetry]
name = "chromadb-ops"
version = "0.1.4"
description = "Maintenance CLI for Chroma AI-native database."
authors = ["Trayan Azarov <trayan.azarov@amikos.tech>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "chroma_ops" }]
[tool.poetry.urls]
"Bug Tracker" = "https://github.com/amikos-tech/chromadb-ops/issues"
"Homepage" = "https://github.com/amikos-tech/chromadb-ops/"
"Source" = "https://github.com/amikos-tech/chromadb-ops/"

[tool.poetry.scripts]
"chops" = "chroma_ops.main:app"

[tool.poetry.dependencies]
python = ">=3.9"
chromadb = "1.0.16"
typer = {extras = ["all"], version = "^0.9.0"}
chroma-hnswlib = "^0.7.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-xdist = "^3.6.1"
black = "24.3.0"
pre-commit = "^3.6.0"
hypothesis = "^6.92.0"
chromadb = { version = ">=0.4.0,<2.0.0" }

[tool.poetry.extras]
core = ["chromadb"]

[tool.mypy]
python_version = "3.9"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rA"
testpaths = [
    "tests",
    "integration",
]
